--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.26.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
@@ -36,5 +37,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy":"http://localhost:3000"
+  "proxy": "http://localhost:3000"
 }
