--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,10 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
+    "bootstrap": "^5.1.3",
     "cloudinary": "^1.29.0",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.2.2",
+    "react-bootstrap": "^2.3.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-modal": "^3.14.4",
