--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "devDependencies": {
-    "cypress": "^9.6.0"
+    "@cypress/code-coverage": "^3.9.12",
+    "babel-plugin-istanbul": "^6.1.1",
+    "cypress": "^9.6.0",
+    "nyc": "^15.1.0"
   }
 }
