Learning to implement code coverage measurement

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
+  "dependencies": {
+    "cypress": "^9.6.0"
+  },
   "devDependencies": {
-    "@cypress/code-coverage": "^3.9.12",
-    "babel-plugin-istanbul": "^6.1.1",
-    "cypress": "^9.6.0",
-    "nyc": "^15.1.0"
+    "@cypress/code-coverage": "^3.9.12"
   }
 }
