--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "cypress": "^9.6.0"
   },
   "devDependencies": {
-    "@cypress/code-coverage": "^3.9.12"
+    "@cypress/code-coverage": "^3.9.12",
+    "cypress-audit": "^1.1.0"
   }
 }
