--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,7 @@
   "scripts": {
     "start": "PORT=3001 react-scripts -r @cypress/instrument-cra start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "PORT=3001 react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
